[package]
name = "osm-tile-downloader"
description = "Download tiles from an OpenStreetMap tileserver to the file system"
version = "0.2.4"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
edition = "2018"

repository = "https://github.com/NeoLegends/osm-tile-downloader"
keywords = ["open", "street", "map", "osm", "tile"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = "2.34.0"
futures = "0.3.28"
indicatif = "0.17.6"
rand = "0.8.5"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["fs", "macros", "time", "rt-multi-thread"] }
