[package]
name = "osm-local-tile-dl"
description = "Download tiles from an OpenStreetMap tileserver to the file system"
version = "0.0.0"
publish = false
edition = "2021"

repository = "https://github.com/jutuon/osm-local-tile-dl"
keywords = ["open", "street", "map", "osm", "tile"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4", features = ["cargo", "derive"] }
futures = "0.3.28"
indicatif = "0.17.6"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["fs", "macros", "time", "rt-multi-thread"] }
